1998-03-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/rrouter.cf, proto/cf/aliases.cf:
	    When user has  .forward  but it is empty, aliasing pushed
	    said user to bitbucket.  Now the .forward is expanded to
	    be  "\username", and no recursed .forward will be entered.
	    Thus the user will stay in the local system.

1998-03-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822hdrs.c:
	    A user found pathological case of errors which caused his
	    router process to blow up.  Turned out to be overflow of
	    stack contained array :-(   Outch!
	    Fixed/limited several array/buffer references in the module.

	* transports/smtp/smtp.c:
	    Full-blown pipelining -- will collect replies asynchronously,
	    and merge results into smtp_sync() states while still sending
	    things out.  This limits (sometimes) amount of things kept
	    in the reply pipeline buffers.

	* proto/cf/aliases.cf:
	    Backed off some changes; pushed too much into bitbucket :-(

	* transports/smtp/smtp.c:
	    Alexis Yushin reported that BDAT didn't work in non-pipelined
	    mode :-(  Corrected that.

1998-03-10  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf, proto/cf/rrouter.cf, proto/cf/fqdnaliases.cf:
	    Rewamped $(rrouter ..) and some other scripts after reports
	    regarding mysterious problems with $PUNTHOST.

	* include/shmmib.h, scheduler/prototypes.h, scheduler/scheduler.c,
	  scheduler/scheduler.h, scheduler/update.c:
	    Hooks/preparations for RFC 2249

	* smtpserver/smtpdata.c:
	    Some anti-spam hacks merged in

1998-03-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Correction to EHLO SIZE processing, aborting message sending
	    if the remote system presents a size limit, and current message
	    size estimate exceeds that value.  Corrections to the way, how
	    active smtp socket peer IP addresses are presented for diagnostic
	    reports.

1998-03-03  Matti Aarnio  <mea@mea.tmt.tele.fi>
