@@ -1,5 +1,10 @@
 1998-03-12  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* scheduler/qprint.c:
+	    A patch from Andrey Blochintsev to restore the functionality
+	    of "mailq -v" with scheduler running with "-H[H]" mode.
+
+
 	* proto/cf/rrouter.cf, proto/cf/aliases.cf:
 	    When user has  .forward  but it is empty, aliasing pushed
 	    said user to bitbucket.  Now the .forward is expanded to
